--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-20231115
+This repository contains the code and exemplary data for paper "Effect of inhaled oxygen level on dynamic glucose-enhanced (DGE) MRI in mouse brain" submitted to Magnetic Resonance in Medicine
